@@ -1,10 +1,11 @@
 2004-03-17 Simon Floery <chimaira@users.sf.net>
 	* implemented parser with flex
 	* modified build process for flex
+	* parser part - user defined functions
 
 2004-03-14 Simon Floery <chimaira@users.sf.net>
 	* fixed stack lifting in RPN mode (thanks to Christian)
-	* GUI part for user defined functions
+	* GUI part - for user defined functions
 
 2004-03-12 Simon Floery <chimaira@users.sf.net>
 	* fixed general functions (brackets, rpn roll-swap) bug
